# gemini-music

./: .env.dist  .gitignore  CLAUDE.md  README.md  REFACTORING_SUMMARY.md  gemini_cli.py  gemini_music.py  pyproject.toml  setup.py
gemini_cli/: core.py  exceptions.py  prompts.py  services.py
gemini_music/: __init__.py  cli.py  config.py  prompts.py  services.py
